# imago

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  QUICKSTAET.md  QUICKSTART.md  README.md  SECURITY.md  build.rs  deny.toml  imago.toml  release-plz.toml
crates/cargo-nirvash/: Cargo.toml
crates/cargo-nirvash/src/: lib.rs
crates/imago-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/imago-cli/src/: cli.rs  lib.rs  main.rs  run.rs  runtime.rs
crates/imago-cli/src/commands/: build.rs  certs.rs  command_common.rs  dependency_cache.rs  deploy.rs  error_diagnostics.rs  init.rs  logs.rs  mod.rs  plugin_sources.rs  ps.rs  run.rs  service.rs  stop.rs  ui.rs  update.rs
crates/imago-cli/src/dev/: build.rs  mod.rs
crates/imago-plugin-macros/: Cargo.toml
crates/imago-plugin-macros/src/: args.rs  descriptor.rs  expand.rs  lib.rs
crates/imago-project-config/: Cargo.toml
crates/imago-project-config/src/: lib.rs
crates/imago-protocol/: Cargo.toml
crates/imago-protocol/src/: cbor.rs  command_contract.rs  envelope.rs  error.rs  lib.rs  messages.rs  validate.rs
crates/imago-schema-gen/: Cargo.toml
crates/imago-schema-gen/src/: lib.rs
crates/imagod/: CHANGELOG.md  Cargo.toml  build.rs
crates/imagod-config/: CHANGELOG.md  Cargo.toml
crates/imagod-config/src/: lib.rs
crates/imagod-control/: CHANGELOG.md  Cargo.toml
crates/imagod-control/benches/: heartbeat_lookup.rs  log_buffer.rs
crates/imagod-control/src/: artifact_store.rs  lib.rs  operation_state.rs  orchestrator.rs  service_supervisor.rs
crates/imagod-control/tests/: command_protocol_conformance.rs
crates/imagod-ipc/: CHANGELOG.md  Cargo.toml
crates/imagod-ipc/src/: lib.rs
crates/imagod-runtime/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-bootstrap/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-bootstrap/src/: lib.rs
crates/imagod-runtime-control/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-control/src/: lib.rs
crates/imagod-runtime-ingress/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-ingress/src/: lib.rs
crates/imagod-runtime-internal/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-internal/src/: lib.rs
crates/imagod-runtime-wasmtime/: CHANGELOG.md  Cargo.toml
crates/imagod-runtime-wasmtime/src/: capability_checker.rs  http_supervisor.rs  lib.rs  plugin_resolver.rs  rpc_bridge.rs  rpc_values.rs  runtime_entry.rs  wasi_nn.rs
crates/imagod-runtime/src/: lib.rs  runner_process.rs  runtime.rs  runtime_wasmtime.rs
crates/imagod-server/: CHANGELOG.md  Cargo.toml
crates/imagod-server/benches/: logs_forwarder.rs
crates/imagod-server/src/: lib.rs  protocol_handler.rs  transport.rs
crates/imagod-spec/: Cargo.toml  README.md  build.rs
crates/imagod-spec-formal/: Cargo.toml  README.md
crates/imagod-spec-formal/src/: artifact_deploy.rs  atoms.rs  authz_view.rs  bounds.rs  command_projection.rs  command_protocol.rs  control_plane.rs  control_view.rs  deploy.rs  legacy_system.rs  lib.rs  logs_projection.rs  manager_plane.rs  manager_runtime.rs  manager_runtime_projection.rs  manager_view.rs  operation_plane.rs  operation_view.rs  plugin_platform.rs  router_projection.rs  rpc.rs  runner_bootstrap.rs  runner_runtime.rs  runtime_projection.rs  service_plane.rs  service_supervision.rs  service_view.rs  session_auth.rs  session_auth_projection.rs  session_transport.rs  shutdown_flow.rs  state_domain.rs  summary_mapping.rs  supervision.rs  symbolic_registration.rs  system.rs  toy_model_controls.rs  wire_protocol.rs
crates/imagod-spec/src/: artifact_deploy.rs  atoms.rs  authorization.rs  bounds.rs  command_contract.rs  command_projection.rs  command_protocol.rs  deploy.rs  envelope.rs  error.rs  identity.rs  ipc.rs  legacy_system.rs  lib.rs  logs_projection.rs  manager.rs  manager_runtime.rs  manager_runtime_projection.rs  manager_shell.rs  model.rs  operation.rs  plugin_capability.rs  plugin_capability_relational.rs  plugin_platform.rs  router_projection.rs  rpc.rs  runner_bootstrap.rs  runner_runtime.rs  runtime_projection.rs  service.rs  service_supervision.rs  session_auth.rs  session_auth_projection.rs  session_transport.rs  shutdown_flow.rs  summary.rs  system.rs  toy_model_controls.rs  wire.rs  wire_protocol.rs
crates/imagod/src/: artifact_store.rs  config.rs  error.rs  lib.rs  main.rs  manager_runtime.rs  operation_state.rs  orchestrator.rs  protocol_handler.rs  runner_process.rs  runner_runtime.rs  runtime_wasmtime.rs  self_update.rs  service.rs  service_supervisor.rs  shutdown.rs  transport.rs
crates/nirvash/: Cargo.toml  README.md
crates/nirvash-backends/: Cargo.toml
crates/nirvash-backends/src/: checker.rs  lib.rs  planning.rs  smt.rs  symbolic.rs
crates/nirvash-backends/tests/: normalized_core.rs
crates/nirvash-check/: Cargo.toml
crates/nirvash-check/src/: lib.rs  planner.rs
crates/nirvash-check/tests/: model_checker_smoke.rs
crates/nirvash-conformance/: Cargo.toml
crates/nirvash-conformance/src/: lib.rs
crates/nirvash-docgen/: Cargo.toml
crates/nirvash-docgen/src/: lib.rs
crates/nirvash-lower/: Cargo.toml
crates/nirvash-lower/src/: lib.rs
crates/nirvash-macros/: Cargo.toml
crates/nirvash-macros/src/: codegen.rs  lib.rs
crates/nirvash-macros/tests/: action_doc_summary.rs  code_tests_nondeterministic.rs  code_witness_history_names.rs  code_witness_nondeterministic_paths.rs  formal_tests_model_case_config.rs  function_like_proc_macros.rs  relational_state_summary.rs  trybuild.rs
crates/nirvash/src/: conformance.rs  doc_graph.rs  domain.rs  dsl_macros.rs  fairness.rs  lib.rs  ltl.rs  model.rs  partial_order.rs  predicate.rs  registry.rs  relation.rs  symbolic_state.rs  system.rs  view.rs
custom-daemons/nanokvm-imagod/: Cargo.toml  README.md
custom-daemons/nanokvm-imagod/src/: main.rs
e2e/: Cargo.toml  imago.toml
e2e/wit/: world.wit
examples/local-imagod-plugin-native-experimental-gpio/: Cargo.toml  README.md  imago.toml  imagod.toml
examples/local-imagod-plugin-native-experimental-gpio/src/: main.rs
examples/local-imagod-plugin-native-experimental-gpio/wit/: world.wit
(+557 files in other folders)
