[package]
name = "imago"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
autotests = false
build = "build.rs"

[features]
default = []
e2e = []

[dev-dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
rcgen = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[workspace]
resolver = "3"
members = [
    "crates/*",
    "custom-daemons/*",
    "examples/local-imagod",
    "examples/local-imagod-http",
    "examples/local-imagod-plugin-native-admin",
    "examples/local-imagod-plugin-hello",
    "examples/local-imagod-socket",
    "plugins/*",
    "e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
ciborium = "0.2.2"
chrono = "0.4.43"
clap = "4.5.60"
dotenvy = "0.15.7"
dialoguer = "0.11.0"
indicatif = "0.18.4"
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.18"
quinn = "0.11.9"
quote = "1.0.42"
rcgen = "0.14.7"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde = "1.0.228"
serde_bytes = "0.11.17"
serde_json = "1.0.149"
semver = "1.0.27"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
time = "0.3.36"
tempfile = "3.17.1"
tokio = "1.49.0"
toml = "1.0.3"
ureq = { version = "2.12.1", default-features = false }
proc-macro2 = "1.0.103"
url = "2.5.4"
uuid = "1.21.0"
wasm-pkg-client = "0.15.0"
wasm-pkg-common = "0.15.0"
wasmtime = "42.0.0"
wasmtime-wasi = "42.0.0"
wasmtime-wasi-http = "42.0.0"
wat = "1.245.1"
wit-component = "0.244.0"
wit-parser = "0.244.0"
web-transport-quinn = "0.11.6"
syn = "2.0.117"

imago-plugin-imago-admin = { path = "plugins/imago-admin", version = "0.1.0" }
imago-plugin-imago-node = { path = "plugins/imago-node", version = "0.1.0" }
imago-plugin-nanokvm-plugin = { path = "plugins/imago-plugin-nanokvm-plugin", version = "0.1.0" }
imago-lockfile = { path = "crates/imago-lockfile", version = "0.1.0" }
imago-plugin-macros = { path = "crates/imago-plugin-macros", version = "0.1.0" }
imago-protocol = { path = "crates/imago-protocol", version = "0.1.0" }
imagod = { path = "crates/imagod", version = "0.1.0" }
imagod-common = { path = "crates/imagod-common", version = "0.1.0" }
imagod-config = { path = "crates/imagod-config", version = "0.1.0" }
imagod-control = { path = "crates/imagod-control", version = "0.1.0" }
imagod-ipc = { path = "crates/imagod-ipc", version = "0.1.0" }
imagod-runtime = { path = "crates/imagod-runtime", version = "0.1.0", default-features = false }
imagod-runtime-bootstrap = { path = "crates/imagod-runtime-bootstrap", version = "0.1.0" }
imagod-runtime-control = { path = "crates/imagod-runtime-control", version = "0.1.0" }
imagod-runtime-ingress = { path = "crates/imagod-runtime-ingress", version = "0.1.0" }
imagod-runtime-internal = { path = "crates/imagod-runtime-internal", version = "0.1.0" }
imagod-runtime-wasmtime = { path = "crates/imagod-runtime-wasmtime", version = "0.1.0" }
imagod-server = { path = "crates/imagod-server", version = "0.1.0" }

[[test]]
name = "e2e_cli"
path = "tests/e2e_cli.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_cli_deploy_failure"
path = "tests/e2e_cli_deploy_failure.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_imagod_config_autocreate"
path = "tests/e2e_imagod_config_autocreate.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http"
path = "tests/e2e_http.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc"
path = "tests/e2e_rpc.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc_single"
path = "tests/e2e_rpc_single.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http_outbound"
path = "tests/e2e_http_outbound.rs"
required-features = ["e2e"]
