[package]
name = "imago"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
autotests = false
build = "build.rs"

[features]
default = []
e2e = []

[dev-dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
rcgen = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
imago-schema-gen = { workspace = true }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[workspace]
resolver = "3"
members = [
    "crates/*",
    "custom-daemons/*",
    "examples/local-imagod",
    "examples/local-imagod-http",
    "examples/local-imagod-plugin-native-admin",
    "examples/local-imagod-plugin-native-experimental-gpio",
    "examples/local-imagod-plugin-native-experimental-i2c",
    "examples/local-imagod-plugin-hello",
    "examples/local-imagod-socket",
    "plugins/*",
    "tools/prup",
    "e2e",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
ciborium = "0.2.2"
chrono = "0.4.44"
criterion = "0.5.1"
clap = "4.5.60"
dotenvy = "0.15.7"
dialoguer = "0.12.0"
include_dir = "0.7.4"
indicatif = "0.18.4"
futures-util = "0.3.32"
inventory = "0.3.21"
embedded-hal = "1.0.0"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.18"
libc = "0.2.182"
linux-embedded-hal = "0.4.0"
rusb = "0.9.4"
quinn = "0.11.9"
quote = "1.0.42"
rcgen = "0.14.7"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
serde = "1.0.228"
serde_bytes = "0.11.17"
serde_json = "1.0.149"
schemars = "1.2.1"
semver = "1.0.27"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
time = "0.3.36"
tempfile = "3.26.0"
tokio = "1.49.0"
toml = "1.0.3"
ureq = { version = "3.2.0", default-features = false }
proc-macro2 = "1.0.103"
url = "2.5.4"
uuid = "1.21.0"
wasm-pkg-client = "0.15.0"
wasm-pkg-common = "0.15.0"
wasmtime = "42.0.0"
wasmtime-wasi = "42.0.0"
wasmtime-wasi-http = "42.0.0"
wasmparser = { version = "0.245.1", features = ["component-model"] }
wat = "1.245.1"
wit-component = "0.245.1"
wit-parser = "0.245.1"
web-transport-quinn = "0.11.6"
syn = "2.0.117"
toml_edit = "0.23.7"
trybuild = "1.0.114"

imago-plugin-imago-admin = { path = "plugins/imago-admin", version = "0.2.0" }
imago-plugin-imago-experimental-gpio = { path = "plugins/imago-experimental-gpio", version = "0.2.0" }
imago-plugin-imago-experimental-i2c = { path = "plugins/imago-experimental-i2c", version = "0.2.0" }
imago-plugin-imago-node = { path = "plugins/imago-node", version = "0.2.0" }
imago-plugin-imago-usb = { path = "plugins/imago-usb", version = "0.2.0" }
imago-plugin-nanokvm-plugin = { path = "plugins/imago-plugin-nanokvm-plugin", version = "0.1.0" }
imago-plugin-macros = { path = "crates/imago-plugin-macros", version = "0.2.0" }
nirvash-core = { path = "crates/nirvash-core", version = "0.2.0" }
nirvash-docgen = { path = "crates/nirvash-docgen", version = "0.2.0" }
nirvash-macros = { path = "crates/nirvash-macros", version = "0.2.0" }
imago-project-config = { path = "crates/imago-project-config", version = "0.2.0" }
imago-protocol = { path = "crates/imago-protocol", version = "0.2.0" }
imago-schema-gen = { path = "crates/imago-schema-gen", version = "0.2.0" }
imagod = { path = "crates/imagod", version = "0.2.0" }
imagod-common = { path = "crates/imagod-common", version = "0.2.0" }
imagod-config = { path = "crates/imagod-config", version = "0.2.0" }
imagod-control = { path = "crates/imagod-control", version = "0.2.0" }
imagod-ipc = { path = "crates/imagod-ipc", version = "0.2.0" }
imagod-runtime = { path = "crates/imagod-runtime", version = "0.2.0", default-features = false }
imagod-runtime-bootstrap = { path = "crates/imagod-runtime-bootstrap", version = "0.2.0" }
imagod-runtime-control = { path = "crates/imagod-runtime-control", version = "0.2.0" }
imagod-runtime-ingress = { path = "crates/imagod-runtime-ingress", version = "0.2.0" }
imagod-runtime-internal = { path = "crates/imagod-runtime-internal", version = "0.2.0" }
imagod-runtime-wasmtime = { path = "crates/imagod-runtime-wasmtime", version = "0.2.0" }
imagod-server = { path = "crates/imagod-server", version = "0.2.0" }
imagod-spec = { path = "crates/imagod-spec", version = "0.2.0" }
imagod-spec-formal = { path = "crates/imagod-spec-formal", version = "0.2.0" }

[workspace.metadata.prup]
base_ref = "origin/main"
bump_strategy = "conventional_commits"
default_bump = "patch"
pre_1_0_breaking_bump = "minor"
baseline_tag_required = true
allow_dirty = false
github_prerelease = true
dependency_kinds = ["normal", "build", "dev"]
shared_line = "imago-shared"

[workspace.metadata.prup.github.release_pr]
labels = ["release"]

[[workspace.metadata.prup.lines]]
id = "imago-cli"
kind = "public-release"
propagate_to = []

[[workspace.metadata.prup.lines]]
id = "imagod-daemon"
kind = "public-release"
propagate_to = []

[[workspace.metadata.prup.lines]]
id = "imago-shared"
kind = "tag-only"
propagate_to = ["imago-cli", "imagod-daemon"]

[[workspace.metadata.prup.crates]]
name = "imago-cli"
line = "imago-cli"
version_source = "package"
emit_tag = true
tag_pattern = "imago-v{{version}}"
github_release = true
github_release_name = "imago-v{{version}}"

[[workspace.metadata.prup.crates]]
name = "imagod"
line = "imagod-daemon"
version_source = "workspace"
emit_tag = true
tag_pattern = "imagod-v{{version}}"
github_release = true
github_release_name = "imagod-v{{version}}"

[[test]]
name = "e2e_cli"
path = "tests/e2e_cli.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_cli_deploy_failure"
path = "tests/e2e_cli_deploy_failure.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_imagod_config_autocreate"
path = "tests/e2e_imagod_config_autocreate.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http"
path = "tests/e2e_http.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc"
path = "tests/e2e_rpc.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc_single"
path = "tests/e2e_rpc_single.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http_outbound"
path = "tests/e2e_http_outbound.rs"
required-features = ["e2e"]
