[package]
name = "imago"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
autotests = false
build = "build.rs"

[features]
default = []
e2e = []

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
imago-cli = { workspace = true }
rcgen = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[build-dependencies]
imago-schema-gen = { workspace = true }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[workspace]
resolver = "3"
members = [
    "crates/*",
    "examples/local-imagod",
    "examples/local-imagod-http",
    "examples/local-imagod-wasi-nn-openvino-person-detection",
    "examples/local-imagod-plugin-camera",
    "examples/local-imagod-plugin-native-admin",
    "examples/local-imagod-plugin-native-experimental-gpio",
    "examples/local-imagod-plugin-native-experimental-i2c",
    "examples/local-imagod-plugin-hello",
    "examples/local-imagod-socket",
    "plugins/*",
    "tools/prup",
    "e2e",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
ciborium = "0.2.2"
chrono = "0.4.44"
criterion = "0.8.2"
clap = "4.6.0"
dotenvy = "0.15.7"
dialoguer = "0.12.0"
include_dir = "0.7.4"
indicatif = "0.18.4"
futures-util = "0.3.32"
embedded-hal = "1.0.0"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.18"
libc = "0.2.183"
linux-embedded-hal = "0.4.0"
rusb = "0.9.4"
v4l2r = "0.0.7"
quinn = "0.11.9"
quote = "1.0.45"
rcgen = "0.14.7"
rustls = "0.23.37"
serde = "1.0.228"
serde_bytes = "0.11.17"
serde_json = "1.0.149"
schemars = "1.2.1"
semver = "1.0.27"
sha2 = "0.10.9"
tar = "0.4.45"
thiserror = "2.0.18"
time = "0.3.36"
tempfile = "3.27.0"
tokio = "1.50.0"
tokio-rustls = "0.26.4"
toml = "1.0.7"
ureq = { version = "3.3.0", default-features = false }
proc-macro2 = "1.0.103"
url = "2.5.4"
uuid = "1.22.0"
wasm-pkg-client = "0.15.0"
wasm-pkg-common = "0.15.0"
wasmtime = "43.0.0"
wasmtime-wasi = "43.0.0"
wasmtime-wasi-http = { version = "43.0.0", default-features = false, features = ["p2"] }
wasmtime-wasi-nn = { version = "43.0.0", default-features = false }
wasmparser = { version = "0.245.1", features = ["component-model"] }
wat = "1.245.1"
webpki-roots = "1.0.6"
wit-component = "0.245.1"
wit-parser = "0.245.1"
web-transport-quinn = "0.11.8"
syn = "2.0.117"
toml_edit = "0.25.4"

imago-plugin-imago-admin = { path = "plugins/imago-admin", version = "0.9.0" }
imago-plugin-imago-experimental-gpio = { path = "plugins/imago-experimental-gpio", version = "0.9.0" }
imago-plugin-imago-experimental-i2c = { path = "plugins/imago-experimental-i2c", version = "0.9.0" }
imago-plugin-imago-node = { path = "plugins/imago-node", version = "0.9.0" }
imago-plugin-imago-usb = { path = "plugins/imago-usb", version = "0.9.0" }
imago-plugin-imago-v4l2 = { path = "plugins/imago-v4l2", version = "0.9.0" }
imago-cli = { path = "crates/imago-cli", version = "0.6.0" }
imago-plugin-macros = { path = "crates/imago-plugin-macros", version = "0.9.0" }
imago-project-config = { path = "crates/imago-project-config", version = "0.9.0" }
imago-protocol = { path = "crates/imago-protocol", version = "0.9.0" }
imago-schema-gen = { path = "crates/imago-schema-gen", version = "0.9.0" }
imagod = { path = "crates/imagod", version = "0.9.0" }
imagod-common = { path = "crates/imagod-common", version = "0.9.0" }
imagod-config = { path = "crates/imagod-config", version = "0.9.0" }
imagod-control = { path = "crates/imagod-control", version = "0.9.0" }
imagod-ipc = { path = "crates/imagod-ipc", version = "0.9.0" }
imagod-runtime = { path = "crates/imagod-runtime", version = "0.9.0", default-features = false }
imagod-runtime-bootstrap = { path = "crates/imagod-runtime-bootstrap", version = "0.9.0" }
imagod-runtime-control = { path = "crates/imagod-runtime-control", version = "0.9.0" }
imagod-runtime-ingress = { path = "crates/imagod-runtime-ingress", version = "0.9.0" }
imagod-runtime-internal = { path = "crates/imagod-runtime-internal", version = "0.9.0" }
imagod-runtime-wasi-nn-cvitek = { path = "crates/imagod-runtime-wasi-nn-cvitek", version = "0.9.0" }
imagod-runtime-wasmtime = { path = "crates/imagod-runtime-wasmtime", version = "0.9.0" }
imagod-server = { path = "crates/imagod-server", version = "0.9.0" }

[workspace.metadata.prup]
base_ref = "origin/main"
bump_strategy = "conventional_commits"
default_bump = "patch"
pre_1_0_breaking_bump = "minor"
baseline_tag_required = true
allow_dirty = false
github_prerelease = true
dependency_kinds = ["normal", "build", "dev"]
shared_line = "imago-shared"

[workspace.metadata.prup.github.release_pr]
labels = ["release"]

[[workspace.metadata.prup.lines]]
id = "imago-cli"
kind = "public-release"
propagate_to = []

[[workspace.metadata.prup.lines]]
id = "imagod-daemon"
kind = "public-release"
propagate_to = []

[[workspace.metadata.prup.lines]]
id = "imago-shared"
kind = "tag-only"
propagate_to = ["imago-cli", "imagod-daemon"]

[[workspace.metadata.prup.crates]]
name = "imago-cli"
line = "imago-cli"
version_source = "package"
emit_tag = true
tag_pattern = "imago-v{{version}}"
github_release = true
github_release_name = "imago-v{{version}}"

[[workspace.metadata.prup.crates]]
name = "imagod"
line = "imagod-daemon"
version_source = "workspace"
emit_tag = true
tag_pattern = "imagod-v{{version}}"
github_release = true
github_release_name = "imagod-v{{version}}"

[[test]]
name = "e2e_cli"
path = "tests/e2e_cli.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_cli_deploy_failure"
path = "tests/e2e_cli_deploy_failure.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_imagod_config_autocreate"
path = "tests/e2e_imagod_config_autocreate.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http"
path = "tests/e2e_http.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc"
path = "tests/e2e_rpc.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_rpc_single"
path = "tests/e2e_rpc_single.rs"
required-features = ["e2e"]

[[test]]
name = "e2e_http_outbound"
path = "tests/e2e_http_outbound.rs"
required-features = ["e2e"]
