[package]
name = "imago-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "imago"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
imago-protocol = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "time"] }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
web-transport-quinn = { workspace = true }
