[package]
name = "imago-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "imago"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
dialoguer = { workspace = true }
include_dir = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
indicatif = { workspace = true }
imago-lockfile = { workspace = true }
imago-protocol = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "net", "io-util", "time", "signal"] }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wasm-pkg-client = { workspace = true }
wasm-pkg-common = { workspace = true }
wit-component = { workspace = true }
wit-parser = { workspace = true }
web-transport-quinn = { workspace = true }
