[package]
name = "imago-plugin-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
wit-parser = { workspace = true }
