[package]
name = "imago-protocol"
version = "0.9.3"
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
ciborium = { workspace = true }
