[package]
name = "imago-schema-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
imago-project-config = { workspace = true }
imagod-config = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
