[package]
name = "imagod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
[dependencies]
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
