[package]
name = "imagod-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
imagod-spec = { workspace = true }
imagod-common = { workspace = true }
rcgen = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
