[package]
name = "imagod-control"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
uuid = { workspace = true, features = ["v4"] }
