[package]
name = "imagod-control"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
bench-internals = ["dep:criterion"]

[dependencies]
base64 = { workspace = true }
criterion = { workspace = true, optional = true }
hex = { workspace = true }
imago-protocol = { workspace = true }
imagod-spec = { workspace = true }
imagod-common = { workspace = true }
imagod-config = { workspace = true }
imagod-ipc = { workspace = true }
nirvash = { workspace = true }
nirvash-conformance = { workspace = true }
nirvash-lower = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
web-transport-quinn = { workspace = true }
wasmparser = { workspace = true }

[dev-dependencies]
imagod-spec-formal = { workspace = true }
nirvash-check = { workspace = true }
nirvash-macros = { workspace = true }
wat = { workspace = true }

[[test]]
name = "command_protocol_conformance"
path = "tests/command_protocol_conformance.rs"
harness = false

[[bench]]
name = "log_buffer"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "heartbeat_lookup"
harness = false
required-features = ["bench-internals"]
