[package]
name = "imagod-ipc"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt"] }
uuid = { workspace = true, features = ["v4"] }
