[package]
name = "imagod-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt"] }
uuid = { workspace = true, features = ["v4"] }
