[package]
name = "imagod-runtime-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-spec = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt"] }
