[package]
name = "imagod-runtime-control"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
