[package]
name = "imagod-runtime-control"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
async-trait = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-runtime-internal = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
