[package]
name = "imagod-runtime-ingress"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-spec = { workspace = true }
imagod-runtime-internal = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
