[package]
name = "imagod-runtime-internal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
[dependencies]
async-trait = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
