[package]
name = "imagod-runtime-internal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-spec = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
