[package]
name = "imagod-runtime-wasmtime"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-runtime-internal = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
