[package]
name = "imagod-runtime-wasmtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
wasi-nn-cvitek = ["dep:imagod-runtime-wasi-nn-cvitek"]
wasi-nn-openvino = ["wasmtime-wasi-nn/openvino"]
wasi-nn-onnx = ["wasmtime-wasi-nn/onnx"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-runtime-internal = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-rustls = { workspace = true }
wasmtime = { workspace = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
imagod-runtime-wasi-nn-cvitek = { workspace = true, optional = true }
wasmtime-wasi-nn = { workspace = true, default-features = false }
webpki-roots = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
tempfile = { workspace = true }
wat = { workspace = true }
wit-component = { workspace = true, features = ["dummy-module"] }
wit-parser = { workspace = true }
