[package]
name = "imagod-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
[features]
default = ["runtime-wasmtime"]
runtime-wasmtime = ["dep:imagod-runtime-wasmtime"]
wasi-nn-openvino = ["runtime-wasmtime", "imagod-runtime-wasmtime/wasi-nn-openvino"]
wasi-nn-onnx = ["runtime-wasmtime", "imagod-runtime-wasmtime/wasi-nn-onnx"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-ipc = { workspace = true }
imagod-runtime-bootstrap = { workspace = true }
imagod-runtime-control = { workspace = true }
imagod-runtime-ingress = { workspace = true }
imagod-runtime-internal = { workspace = true }
imagod-runtime-wasmtime = { workspace = true, optional = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio = { workspace = true, features = ["io-std", "io-util", "net", "rt", "sync", "time"] }
