[package]
name = "imagod-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
[dependencies]
async-trait = { workspace = true }
imago-protocol = { workspace = true }
imagod-common = { workspace = true }
imagod-config = { workspace = true }
imagod-control = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
uuid = { workspace = true, features = ["v4"] }
web-transport-quinn = { workspace = true }
